2011-06-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3314762 ] Memory leak in method invoke using SFCB local interface
	(patch by Chris Poblete)

	* control.c:
	[ 3165732 ] Add ability for client library to specify configuration file
	(patch by Josef Moellers)

2011-06-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, cimcClientSfcbLocal.c:
	[ 3314383 ] Memory leak in CimResource_Enumerate_EP
	(patch by Chris Poblete)

	* Makefile.am
	[ 3047562 ] [patch] Create bzip2 tarballs on "make dist"
	(patch by Klaus Kaempf)

2011-06-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c, cimAccountPassthrough.mof, 
	cimXmlRequest.c, cimXmlRequest.h, httpAdapter.c, Makefile.am,
	configure.ac, default.reg.in:
	[ 3313833 ] Allow for passthrough for expired user to update password
	
2011-05-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac
	[ 3190623 ] Set *IsSettable propperties to false for IndicationService
	Problem with auto-enable when tests are enabled.

2011-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c
	[ 3296541 ] CIM_IndicationSubscription corrupts after delilvery fails 

2011-05-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 3287789 ] interopServerProvider not conservative when answering reqs

2011-04-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof.pre.in, Makefile.am, configure.ac
	control.c, interopServerProvider.c, sfcb.cfg.pre.in:
	[ 3190623 ] Set *IsSettable propperties to false for IndicationService

2011-04-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3202466 ] Single item on method param of array type rejected via Local
	(patch by Chris Poblete)

	* queryOperation.c: 
	[ 3291646 ] Unused var in __NullEvaluate

2011-04-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c: